<resources>
    <string name="authority" translatable="false">net.samclarke.android.habittracker.provider</string>
    <string name="sync_account_type" translatable="false">habittracker.samclarke.net</string>
    <string name="pref_quote_of_day" translatable="false">pref_quote_of_day</string>

    <string name="default_quote_of_day">It always seems impossible until its done. \n- Nelson Mandela</string>

    <string name="app_name">Habit Tracker</string>

    <string name="widget_empty">There are no habits to display</string>

    <string name="request_permission_icon">Permission icon</string>

    <string name="title_activity_habit_details">Habit Details</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_create_habit">Create Habit</string>
    <string name="title_activity_request_permission">Request Permission</string>

    <string name="notification_content">Reminder to do %1$s</string>

    <string name="time_format">%1$02d:%2$02d</string>
    <string name="time_range_format">%1$02d:%2$02d - %3$02d:%4$02d</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort_by_title">Title</string>
    <string name="action_sort_by_date">Start Date</string>
    <string name="action_include_archived">Include Archived</string>

    <string name="action_habits_page">Habits</string>
    <string name="action_goals_page">Goals</string>
    <string name="action_statistics_page">Statistics</string>
    <string name="action_reminders_page">Reminders</string>

    <string name="action_save_habit">Save</string>
    <string name="action_add_habit">Add Habit</string>

    <string name="action_edit">Edit</string>
    <string name="action_archive">Archive</string>
    <string name="action_remove">Delete</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>


    <!-- Target description string -->
    <string name="target">Target: %1$s %2$s %3$s per day</string>
    <string name="target_none">Target: No daily target</string>

    <string-array name="target_operators">
        <item>no target</item>
        <item>more than</item>
        <item>at least</item>
        <item>exactly</item>
        <item>at most</item>
        <item>less than</item>
    </string-array>

    <string-array name="target_types">
        <item>check ins</item>
        <item>minutes</item>
        <item>metres</item>
        <item>kilograms</item>
        <item>litres</item>
        <item>notes</item>
    </string-array>


    <!-- Check in dialog -->
    <string name="check_in_title">Check In</string>
    <string name="check_in_positive_button">Save</string>
    <string name="check_in_negative_button">Cancel</string>
    <string name="check_in_neutral_button">Mark as skipped</string>
    <string name="check_in_decrement">Decrease check in value by 1</string>
    <string name="check_in_increment">Increase check in value by 1</string>
    <string name="check_in_value_prefix">Log</string>
    <string name="check_in_value_postfix">%1$s</string>
    <string name="check_in_status">Check in status</string>
    <string name="check_in_auto_status">Automatically set status</string>
    <string name="check_in_notes">Notes</string>
    <string name="check_in_default_value">1</string>

    <string-array name="check_in_statuses">
        <item>None</item>
        <item>Complete</item>
        <item>Skipped</item>
        <item>Failed</item>
    </string-array>


    <!-- Remove goal dialog -->
    <string name="dialog_remove_goal_title">Delete this Goal?</string>
    <string name="dialog_remove_goal_message">This will permanently delete the goal.</string>
    <string name="dialog_remove_goal_positive">Delete</string>
    <string name="dialog_remove_goal_negative">Cancel</string>


    <!-- Remove habit dialog -->
    <string name="dialog_remove_habit_title">Delete this Habit?</string>
    <string name="dialog_remove_habit_message">This will permanently delete the habit and all related goals, reminders and check ins.</string>
    <string name="dialog_remove_habit_positive">Delete</string>
    <string name="dialog_remove_habit_negative">Cancel</string>


    <!-- Habit details activity view -->
    <string name="tab_habit_details">Details</string>
    <string name="tab_habit_goals">Goals</string>
    <string name="tab_habit_reminders">Reminders</string>


    <!-- Habit details view -->
    <string name="habit_details_top_streaks">Top 5 streaks</string>
    <string name="habit_details_day_statuses">Day status</string>
    <string name="habit_details_progress_past_month">Progress during the past 30 days</string>
    <string name="habit_details_progress_check_ins">Check Ins</string>
    <string name="habit_details_status_complete">Complete</string>
    <string name="habit_details_status_skipped">Skipped</string>
    <string name="habit_details_status_failed">Failed</string>
    <string name="habit_details_longest_streaks">Longest Streaks</string>
    <string name="habit_details_progress">Progress</string>


    <!-- Goal dialog -->
    <string name="goal_name">Goal name</string>
    <string name="goal_target">Target streak</string>
    <string name="goal_starting_date">Starting from</string>
    <string name="goal_target_default">0</string>
    <string name="goal_name_required">A name is required</string>
    <string name="goal_dialog_title">Add Goal</string>
    <string name="goal_dialog_positive">Add Goal</string>
    <string name="goal_dialog_negative">Cancel</string>


    <!-- Goals list view -->
    <string name="goals_empty_list">You currently have no goals</string>
    <string name="goal_target_streak">Target: %1$s day streak</string>
    <string name="goal_menu">Goal menu</string>


    <!-- Statistics view -->
    <string name="stats_goals_title">Goal stats</string>
    <string name="stats_goals_body">You have completed %1$d goals and have %2$d goals remaining.</string>
    <string name="stats_check_ins_title">Check In stats</string>
    <string name="stats_check_ins_done">Complete</string>
    <string name="stats_check_ins_skipped">Skipped</string>
    <string name="stats_check_ins_failed">Failed</string>


    <!-- Reminders list view -->
    <string name="reminder_any_location">Any Location</string>
    <string name="reminder_any_time">Any time</string>
    <string name="reminder_location_icon">Reminder location</string>
    <string name="reminder_menu">Reminder menu</string>


    <!-- Reminder dialog -->
    <string name="reminder_dialog_title">Add Reminder</string>
    <string name="reminder_dialog_positive">Add Reminder</string>
    <string name="reminder_dialog_negative">Cancel</string>
    <string name="reminder_type">Reminder type</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_location">Location</string>
    <string name="reminder_when">When</string>
    <string name="reminder_repeating_every_day">Repeating every day</string>
    <string name="reminder_repeating">Repeating</string>
    <string name="reminder_location_missing_error">A location is required</string>

    <string-array name="reminder_types">
        <item>At a specific time</item>
        <item>At a specific location</item>
    </string-array>

    <string-array name="reminder_location_types">
        <item>Entering</item>
        <item>Dwelling</item>
        <item>Leaving</item>
    </string-array>


    <!-- Habits list view -->
    <string name="habits_list_empty">You have no habits yet</string>
    <string name="habit_menu">Habit menu</string>


    <!-- Create/edit habit form -->
    <string name="habit_name">Habit Name</string>
    <string name="habit_description">Habit Description (optional)</string>
    <string name="habit_start_date">Starting from</string>
    <string name="habit_frequency_interval_prefix">Every</string>
    <string name="habit_frequency_interval_postfix">days</string>
    <string name="habit_color">Color</string>
    <string name="habit_track">Track</string>
    <string name="habit_frequency">Repeating</string>
    <string name="habit_target">Target</string>
    <string name="habit_target_postfix">per day</string>
    <string name="habit_error_name_exists">The name %1$s already exists</string>
    <string name="habit_error_name_required">A target must be specified or set to none</string>
    <string name="habit_error_target_required">A target must be specified or set to none</string>
    <string name="habit_error_interval_required">Interval cannot be empty</string>
    <string name="habit_error_day_of_week_required">At least 1 day of the week must be selected</string>
    <string name="habit_error_day_of_month_required">At least one day of the month must be selected</string>

    <string-array name="habit_frequencies">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Custom</item>
    </string-array>

    <string-array name="habit_types">
        <item>Check Ins</item>
        <item>Minutes</item>
        <item>Metres</item>
        <item>Kilograms</item>
        <item>Litres</item>
        <item>Notes</item>
    </string-array>

    <string-array name="habit_target_operators">
        <item>No target</item>
        <item>More than</item>
        <item>At least</item>
        <item>Exactly</item>
        <item>At most</item>
        <item>Less than</item>
    </string-array>
</resources>
