<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_habits_page"
            android:icon="@drawable/ic_repeat_black_24dp"
            android:title="@string/action_habits_page" />
        <item
            android:id="@+id/action_goals_page"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/action_goals_page" />
        <item
            android:id="@+id/nav_reminders_page"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/action_reminders_page" />
        <item
            android:id="@+id/nav_statistics_page"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/action_statistics_page" />
    </group>
</menu>