<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/habit_frequency_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/reminder_type"
        style="@style/AppTheme.FloatingLabel.NegativeMargin" />

    <Spinner
        android:id="@+id/reminder_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/reminder_types" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reminder_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_time"
            android:inputType="none"
            android:focusable="false"
            tools:text="16:52" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.GridLayout
        android:id="@+id/reminder_location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reminder_location_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_columnSpan="5"
            app:layout_columnWeight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reminder_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_location"
                android:inputType="none"
                android:focusable="false"
                tools:text="Some location" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reminder_when"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_columnSpan="6"
            style="@style/AppTheme.FloatingLabel.NegativeMargin" />

        <Spinner
            android:id="@+id/location_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_columnSpan="6"
            android:entries="@array/reminder_location_types" />

    </android.support.v7.widget.GridLayout>

    <CheckBox
        android:id="@+id/is_repeating_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_repeating_every_day"
        android:checked="true" />


    <TextView
        android:id="@+id/frequency_days_of_week_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/reminder_repeating"
        style="@style/AppTheme.FloatingLabel"
        android:visibility="gone" />

    <net.samclarke.android.habittracker.ui.pickers.WeekDaysPicker
        android:id="@+id/frequency_days_of_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>