<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="net.samclarke.android.habittracker.ui.CreateHabitActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/habit_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/habit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="textCapSentences"
                    android:hint="@string/habit_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/habit_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_name_label"
                android:hint="@string/habit_description">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/habit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="top"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/theme_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_description_label"
                android:text="@string/habit_color"
                style="@style/AppTheme.FloatingLabel" />

            <com.thebluealliance.spectrum.SpectrumPalette
                android:id="@+id/habit_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/theme_label"
                app:paddingStart="0dp"
                app:paddingEnd="0dp"
                app:spectrum_colors="@array/theme_colors"
                app:spectrum_outlineWidth="0dp" />

            <TextView
                android:id="@+id/track_type_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/habit_color"
                android:text="@string/habit_track"
                style="@style/AppTheme.FloatingLabel.NegativeMargin" />

            <Spinner
                android:id="@+id/target_type"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/track_type_label"
                android:spinnerMode="dropdown"
                android:entries="@array/habit_types"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_color"
                android:layout_toEndOf="@id/target_type"
                android:layout_toRightOf="@id/target_type">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/habit_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="none"
                    android:ems="8"
                    android:focusable="false"
                    android:hint="@string/habit_start_date" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/habit_frequency_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/target_type"
                android:text="@string/habit_frequency"
                style="@style/AppTheme.FloatingLabel.NegativeMargin" />

            <Spinner
                android:id="@+id/habit_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_frequency_label"
                android:spinnerMode="dropdown"
                android:entries="@array/habit_frequencies"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <FrameLayout
                android:id="@+id/frequency_value_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_frequency">

                <LinearLayout
                    android:id="@+id/frequency_interval_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_frequency_interval_prefix"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/frequency_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_frequency_interval_postfix"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>

                <net.samclarke.android.habittracker.ui.pickers.WeekDaysPicker
                    android:id="@+id/frequency_days_of_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />


                <net.samclarke.android.habittracker.ui.pickers.MonthDaysPicker
                    android:id="@+id/frequency_days_of_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </FrameLayout>

            <TextView
                android:id="@+id/habit_target_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/frequency_value_container"
                android:text="@string/habit_target"
                style="@style/AppTheme.FloatingLabel.NegativeMargin" />

            <Spinner
                android:id="@+id/target_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_target_label"
                android:spinnerMode="dropdown"
                android:entries="@array/target_operators"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_target_label"
                android:layout_toEndOf="@+id/target_operator"
                android:layout_toRightOf="@+id/target_operator"
                android:layout_alignBottom="@+id/target_operator"
                android:inputType="numberSigned"
                android:ems="2"
                android:visibility="gone" />

            <TextView
                android:id="@+id/target_postfix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/habit_target_label"
                android:layout_toEndOf="@+id/target"
                android:layout_toRightOf="@+id/target"
                android:layout_alignBaseline="@+id/target_operator"
                android:text="@string/habit_target_postfix"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
